<resources>
    <!-- BOTTOM NAVIGATION -->
    <string name="app_name">innox</string>
    <string name="title_home">Home</string>
    <string name="title_instock">InStock</string>
    <string name="title_create">Create</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>

    <!-- DRAWER NAVIGATION -->
    <string name="nav_privacy">Privacy Policy</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_credit">Credit Libraries</string>
    <string name="nav_settings">Settings</string>

    <!--  OTHER TITLE-->
    <string name="title_custom">Create Customized Designs </string>
    <string name="title_most_popular">Most Popular Product </string>
    <string name="title_most_promotion">Most Promotion Product </string>
    <string name="title_view_all">View All</string>
    <string name="choose_one">Choose One</string>

    <!--  CATEGORY-->
    <string name="category_shoes">Shoes</string>
    <string name="category_hoodies">Hoodies</string>
    <string name="category_tshirts">Tshirts</string>
    <string name="category_one">Choose One</string>
    <string name="category_two">Choose One</string>


    <!--    ACCOUNT-->
    <string name="account_info">Please Login to view your account info</string>
    <string name="account_login_info">Login into 121 Innox</string>
    <string name="account_register_info">Create New 121 Innox Account</string>
    <string name="account_login">Login</string>
    <string name="account_register">Register</string>
    <string name="account_continue_info">Hi Christopher Cambell, Welcome from 121 Innox Let us Know more about</string>
    <string name="account_continue">Continue</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_phone">Phone</string>
    <string name="account_upload_profile">Phone</string>
    <string name="account_state_division">State/Division</string>
    <string name="account_township">TownShip</string>

    <string name="choose_state_division">Choose State/Division</string>
    <string name="choose_township">Choose TownShip</string>

    <string name="account_address">Address</string>
    <string name="account_password">Password</string>
    <string name="account_confirm_password">Confirm Password</string>
    <string name="account_exist">Already have an account?</string>
    <string name="account_not_found">Don\'t have an account?</string>
    <string name="account_create">Let\'t create New one</string>
    <string name="account_visit">Come Login and visit us</string>
    <string name="remark">Remark</string>

    <!-- PRODUCT DETAIL-->
    <string name="product_colors">Available Colors</string>
    <string name="product_choose_color">Choose Colors</string>
    <string name="product_sizes">Available Sizes</string>
    <string name="product_choose_size">Choose Sizes</string>
    <string name="product_des">Description</string>
    <string name="product_hight_light">HighLights</string>

    <!--    CART-->
    <string name="cart_text">Add to Cart</string>
    <string name="cart_summary">Cost Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="item_total">Total</string>
    <string name="total">Total Cost</string>


    <string name="item_cost">Items Cost</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_confirm">Confirm Orders</string>
    <string name="order_item">Order Items</string>
    <string name="order_id">Order Id</string>
    
    <string name="order_success_info">Your order from Innox is success. We are processing for your order to deliver to you soon. Thanks for shopping with us.</string>
    <string name="order_active_info">Your order from Innox is success. We are processing for your order to deliver to you soon. Thanks for shopping with us.</string>
    <string name="order_pending_info">Your order from 121 Innox is success. We are processing for your order to deliver it to you soon.Thanks for shopping with us</string>
    <string name="order_past_info">Yor order from 121 Innox is delivered on %1$s</string>
    <string name="order_status">Order Status</string>
    <string name="deliver_cost">Deliver Cost</string>
    <string name="order_date">Order Date</string>
    <string name="total_status">Total Cost</string>

    <string name="search_text">What kind of clothing do you want find?</string>
    <string name="filter_text">Find your Product</string>
    <string name="search_categories_text">Categories</string>
    <string name="search_sub_categories_text">Sub Categories</string>
    <string name="choose_categories_text">Choose Categories</string>
    <string name="choose_sub_categories_text">Choose Sub Categories</string>
    <string name="keywords">Keywords</string>
    <string name="price_range">Price Range</string>
    <string name="search">Search</string>
    <string name="artwork">Choose ArtWork</string>
    <string name="font_style">Choose Text Styles</string>


    <!--    BUTTON TEXT-->
    <string name="btn_edit">Edit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
</resources>
