<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_instock"
        android:icon="@drawable/instock_black"
        android:title="@string/title_instock" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/designer_black"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account" />

</menu>
