<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/gr2" android:checkableBehavior="single">
        <item android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_about_us" />
    </group>
    <group android:id="@+id/gr3" android:checkableBehavior="single">
        <item android:id="@+id/nav_credit"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/nav_credit" />
    </group>
    <group android:id="@+id/gr4" android:checkableBehavior="single">
        <item android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/nav_privacy" />
    </group>
    <group android:id="@+id/gr5" android:checkableBehavior="single">
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
</menu>
