<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.instock.InStockSearchFilterActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_font_size"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="12dp"
                    android:textStyle="bold"
                    android:text="@string/filter_text"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/keywords"
                    app:endIconCheckable="true"
                    app:endIconMode="custom">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="vertical">
                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/price_range"
                          android:layout_alignParentLeft="true"/>
                      <TextView
                          android:id="@+id/txt_price"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/colorPrimary"
                          android:text="0 MMK - 50000 MMK"
                          android:layout_gravity="right"
                          android:layout_alignParentRight="true"/>
                  </RelativeLayout>
=
                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/price_range"
                        app:labelStyle="@style/tooltip"
                        app:labelBehavior="floating"
                        android:valueTo="50000"
                        android:valueFrom="0"
                        app:values="@array/initial_slider_values"
                        android:layout_margin="0dp"
                        android:padding="0dp"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/search_categories_text"
                    app:endIconCheckable="true"
                    app:endIconMode="dropdown_menu">
                    <AutoCompleteTextView
                        android:id="@+id/ac_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:editable="false"
                        android:text="@string/choose_categories_text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/search_sub_categories_text"
                    app:endIconCheckable="true"
                    app:endIconMode="dropdown_menu">
                    <AutoCompleteTextView
                        android:id="@+id/ac_sub_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:editable="false"
                        android:text="@string/choose_sub_categories_text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_margin="0dp"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                app:icon="@drawable/ic_search_black_24dp"
                app:iconGravity="textStart"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search"
                android:padding="20dp"
                android:insetBottom="0dp"
                app:cornerRadius="0dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>