<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/thumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/account_banner"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/txt_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/account_info"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/account_login_info"
                android:textAllCaps="false"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_info"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
